# shape_ai_worker

docker/: Dockerfile.amd64  Dockerfile.arm64  container.sh  docker-compose.yml
ffw/: CHANGELOG.rst  package.xml
ffw_bringup/: CHANGELOG.rst  package.xml  setup.py
ffw_bringup/config/common/: rs_serial.yaml
ffw_bringup/config/ffw_bh5_rev1_follower/: pack_position.yaml
ffw_bringup/config/ffw_lg2_leader/: ffw_lg2_leader_ai_hardware_controller.yaml  ffw_lg2_leader_ai_hardware_controller_mux.yaml  ffw_lg2_leader_ai_hardware_controller_no_head.yaml  ffw_lg2_leader_ai_hardware_controller_no_head_mux.yaml  ffw_lg2_leader_cmd_vel_override.yaml
ffw_bringup/config/ffw_sg2_rev1_follower/: ffw_sg2_follower_ai_hardware_controller.yaml  pack_position.yaml
ffw_bringup/config/ffw_sh5_rev1_follower/: pack_position.yaml
ffw_bringup/ffw_bringup/: robot_description_topic_publisher.py
ffw_bringup/launch/: camera_realsense_right.launch.py  camera_realsense_teleop.launch.py  ffw_lg2_leader_ai.launch.py  ffw_pack.launch.py  ffw_sg2_ai.launch.py  ffw_sg2_follower_ai.launch.py  ffw_sg2_teleop_practice.launch.py  ffw_sh5_follower_ai.launch.py
ffw_description/: CHANGELOG.rst  package.xml
ffw_description/ros2_control/ffw_bg2_rev2_follower/: ffw_bg2_follower.ros2_control.xacro
ffw_description/ros2_control/ffw_bg2_rev4_follower/: ffw_bg2_follower.ros2_control.xacro  ffw_bg2_follower_smooth.ros2_control.xacro
ffw_description/ros2_control/ffw_bh5_rev1_follower/: ffw_bh5_follower.ros2_control.xacro
ffw_description/ros2_control/ffw_lg2_leader/: ffw_lg2_leader_left.ros2_control.xacro  ffw_lg2_leader_right.ros2_control.xacro
ffw_description/ros2_control/ffw_sg2_rev1_follower/: ffw_sg2_base.ros2_control.xacro  ffw_sg2_follower.ros2_control.xacro  ffw_sg2_follower_smooth.ros2_control.xacro
ffw_description/ros2_control/ffw_sh5_rev1_follower/: ffw_sh5_base.ros2_control.xacro  ffw_sh5_follower.ros2_control.xacro
ffw_description/urdf/ffw_lg2_leader/: ffw_lg2_leader.urdf.xacro
ffw_joint_trajectory_command_broadcaster/: CHANGELOG.rst  package.xml
ffw_joystick_controller/: CHANGELOG.rst  package.xml
ffw_joystick_controller/include/joystick_controller/: joystick_controller.hpp
ffw_joystick_controller/src/: joystick_controller.cpp  joystick_controller_parameters.yaml
ffw_moveit_config/: CHANGELOG.rst  package.xml
ffw_navigation/: CHANGELOG.rst  package.xml
ffw_navigation/launch/: navigation.launch.py
ffw_navigation/maps/: map.pgm  map.yaml
ffw_robot_manager/: CHANGELOG.rst  package.xml
ffw_spring_actuator_controller/: CHANGELOG.rst  package.xml
ffw_swerve_drive_controller/: CHANGELOG.rst  CMakeLists.txt  ffw_swerve_drive_controller.xml  package.xml
ffw_swerve_drive_controller/config/: swerve_drive_controller_parameter.yaml
ffw_swerve_drive_controller/include/ffw_swerve_drive_controller/: marker_visualize.hpp  odometry.hpp  speed_limiter.hpp  swerve_drive_controller.hpp
ffw_swerve_drive_controller/src/: marker_visualize.cpp  odometry.cpp  speed_limiter.cpp  swerve_drive_controller.cpp
ffw_teleop/: CHANGELOG.rst  package.xml  setup.py
ffw_teleop/config/: mission_profiles.yaml  operator_screen_layout.yaml  wrist_realsense_serials.yaml  zed_teleop_depth.yaml  zed_teleop_depth_1080p30.yaml
ffw_teleop/docs/: lg2_leader_udev.md
ffw_teleop/ffw_teleop/: alignment_status.py  leader_tact_ok_bridge.py  mission_b_grasp_guard.py  mission_mode_manager.py  operator_drive_panel.py  operator_image_viewer.py  operator_layout_manager.py  right_wrist_depth_overlay.py  teleop_bandwidth_monitor.py  teleop_cmd_vel_mux.py  teleop_head_trajectory_mux.py  text_render.py  zed_depth_assist.py
ffw_teleop/launch/: camera_realsense_teleop.launch.py  ffw_sg2_operator_leader.launch.py  ffw_sg2_robot_teleop.launch.py  ffw_sg2_teleop_practice.launch.py  teleop_operator.launch.py  teleop_right_wrist_depth.launch.py  teleop_wrist_depth.launch.py
ffw_teleop/rviz/: teleop_operator.rviz
