<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ffw_bringup</name>
  <version>1.3.1</version>
  <description>
    ROS 2 launch scripts for starting the FFW
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://ai.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ai_worker</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ai_worker/issues</url>
  <author email="wsh@robotis.com">Sungho Woo</author>
  <author email="wwj@robotis.com">Woojin Wie</author>
  <author email="ywh@robotis.com">Wonho Yun</author>
  <depend>rclpy</depend>
  <depend>dynamixel_hardware_interface</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_image</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ffw_description</exec_depend>
  <exec_depend>ffw_teleop</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>image_transport_plugins</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
