<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ffw_robot_manager</name>
  <version>1.3.0</version>
  <description>ROS2 controller that logs GPIO Error Code and Hardware Error Status for all GPIO devices.</description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache-2.0</license>
  <author email="wwj@robotis.com">Woojin Wie</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ros2_control_cmake</build_depend>
  <depend>rclcpp</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>std_srvs</depend>
  <depend>dynamixel_hardware_interface</depend>
  <depend>generate_parameter_library</depend>
  <depend>dynamixel_interfaces</depend>
  <depend>sensor_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
