<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ffw_swerve_drive_controller</name>
  <version>1.1.9</version>
  <description>AI Worker's swerve drive ros2_controller</description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache-2.0</license>
  <author email="lgh@robotis.com">Geonhee Lee</author>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <build_depend>generate_parameter_library</build_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>hardware_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>rcpputils</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface_testing</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/ffw_swerve_drive_controller.xml"/>
  </export>
</package>
